[package]
name = "moustache"
version = "1.1.0"
edition = "2021"
authors = ["Julien Garderon <julien.garderon@gmail.com>"]

# [dependencies]
# utils_macro = { path = "./utils_macro" }

[features]
engine-extensions = []

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"